--- a/Website/templates/funny.html
+++ b/Website/templates/funny.html
@@ -184,3 +184,22 @@
                         </button>
                     -->
 
+
+                    <div class="image-container">
+
+                        <div class="images">
+                                <div class="image-box image-box1">
+                                        <img class="image image1" src="{{url_for('static', filename='images/fish.png')}}" id="image1" width="240px" height="240px">
+                                    <!-- <button class="enlarge-button">
+                                        <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" class="enlarge-image" onmouseover="this.src='{{url_for('static', filename='images/enlarge-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/enlarge-button.svg')}}'" width="40px" height="40px">
+                                    </button>
+                                -->
+                            </div>
+                    
+                            <div class="image-box image-box2">
+                                    <img class="image image2" src="{{url_for('static', filename='images/fish.png')}}" id="image2" width="240px" height="240px">
+                                <!-- <button class="enlarge-button">
+                                    <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" class="enlarge-image" onmouseover="this.src='{{url_for('static', filename='images/enlarge-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/enlarge-button.svg')}}'" width="40px" height="40px">
+                                </button>
+                            -->
+                            </div>
