--- a/Website/templates/uploadImage.html
+++ b/Website/templates/uploadImage.html
@@ -45,9 +45,9 @@
                             </span>
                         </h1>                            
 
-                        <form method="POST" action="" enctype="multipart/form-data">
+                        <form method="POST" action="" enctype="multipart/form-data" onsubmit="invalidFileType()">
                                 <p><label for="file" class="file-label">
-                                        <input type="file" name="file" class="file" accept="image/*">
+                                        <input type="file" name="file" class="file" id="file" accept="image/*">
                                 </label>
                                 <input type="submit" value="Upload" class="submit"></p>
                         </form>
