Added home button to the result page

--- a/Website/templates/result.html
+++ b/Website/templates/result.html
@@ -33,6 +33,12 @@
                                 <img src="{{url_for('static', filename='images/2880px-Logo_ROSEN_Group_White.png')}}" id="logo" width="220px" height="63px">
                         </a>
                     </div>
+
+                    <div>
+                        <a href="uploadImage">
+                            <img src="{{url_for('static', filename='images/home-button.png')}}" class="home-button" width="30px" height="30px">
+                        </a>
+                    </div>
             </div>
     </div>
 
