Add links to progress bar

--- a/Website/templates/search.html
+++ b/Website/templates/search.html
@@ -13,8 +13,8 @@
                 <!-- Progress Bar -->
         <nav class="navmenu">
                 <ul>
-                       <li>Upload Image</li>
-                       <li>Upload Video</li>
+                        <li><a href = "uploadImage" onclick="return confirm('Please click on OK to exit processing.');">Upload Image</a></li>
+                        <li><a href = "uploadVideo" onclick="return confirm('Please click on OK to exit processing.');">Upload Video</a></li>
                        <li>Extracting Frames</li>
                        <li>Count Specification</li>
                        <li class="active">Image Searching</li>
