--- a/Website/templates/uploadImage.html
+++ b/Website/templates/uploadImage.html
@@ -68,8 +68,8 @@
         <!-- Progress Bar -->
         <nav class="navmenu">
                  <ul>
-                        <li class="active">Upload Image</li>
-                        <li>Upload Video</li>
+                        <li class="active"><a href = "uploadImage">Upload Image</a></li>
+                        <li><a href="" onclick="return alert('Please upload an image to continue.');">Upload Video</a></li>
                         <li>Extracting Frames</li>
                         <li>Count Specification</li>
                         <li>Image Searching</li>
