--- a/Website/templates/uploadVideo.html
+++ b/Website/templates/uploadVideo.html
@@ -65,14 +65,14 @@
 
                 <!-- Progress Bar -->
                 <nav class="navmenu">
-                        <ul>
-                                <li>Upload Image</li>
-                                <li class="active">Upload Video</li>
-                                <li>Extracting Frames</li>
-                                <li>Count Specification</li>
-                                <li>Image Searching</li>
-                                <li>Result</li>
-                        </ul>
+                    <ul>
+                           <li><a href = "uploadImage">Upload Image</a></li>
+                           <li class="active"><a href = "uploadVideo">Upload Video</a></li>
+                           <li>Extracting Frames</li>
+                           <li>Count Specification</li>
+                           <li>Image Searching</li>
+                           <li>Result</li>
+                   </ul>
                 </nav>
 
                 <!--Run button-->
