--- a/Website/templates/loading.html
+++ b/Website/templates/loading.html
@@ -15,8 +15,8 @@
                 <!-- Progress Bar -->
                 <nav class="navmenu">
                         <ul>
-                                <li>Upload Image</li>
-                                <li>Upload Video</li>
+                                <li><a href = "uploadImage" onclick="return confirm('Please click on OK to exit processing.');">Upload Image</a></li>
+                                <li><a href = "uploadVideo" onclick="return confirm('Please click on OK to exit processing.');">Upload Video</a></li>
                                 <li class="active">Extracting Frames</li>
                                 <li>Count Specification</li>
                                 <li>Image Searching</li>
