Add css style to progress bar links

--- a/Website/static/styles/index-style.css
+++ b/Website/static/styles/index-style.css
@@ -431,3 +431,12 @@ ul {
 .navmenu ul li.active::before {
         background: rgb(54, 85, 120);
 }
+
+a {
+    text-decoration: none;
+    
+}
+
+a:link, a:visited {
+    color:rgb(54, 85, 120);
+}
