--- a/Website/static/styles/loading-style.css
+++ b/Website/static/styles/loading-style.css
@@ -260,3 +260,161 @@ input.question:invalid ~ input[type="submit"], textarea.question:invalid ~ input
         margin: auto;
         
 }
+
+
+
+
+.top-border {
+    background-color: rgb(54, 85, 120);
+    display: block;
+    position: fixed;
+    height: 100px;
+    overflow: hidden;
+    width: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+}
+
+.rosen {
+    position: relative;
+    display: flex;
+    left: 20px;
+    top: 20px;
+}
+
+.top-border .rosen-logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 15px;
+}
+
+
+.top-elements {
+    position: relative;
+    display: flex;
+}
+
+/* page title at the top */
+.title-label {
+    display: block;
+    position: absolute;
+    text-align: center;
+    right: 0px;
+    left: 0px;
+    font-size: 48px;
+    color: white;
+    top: 20px;
+}
+
+.logout {
+    display: inline-block;
+    text-align: center;
+    top: 66px;
+    right: 32px;
+    position: absolute;
+}
+
+.logout-button {
+    color: white;
+    background-color: transparent;
+    text-decoration: underline;
+    font-size: 14px;
+    border: none;
+}
+
+.logout-button:hover {
+    color: rgb(241, 241, 241);
+    cursor: pointer;
+}
+
+.run-button {
+    background-color: rgb(54, 85, 120);
+    color: white;
+    border: none;
+    border-radius: 10px;
+    font-weight: 500;
+    font-size: 22px;
+    width: 150px;
+    height: 55px;
+    position: absolute;
+    bottom: 6.5%;
+    left: 85%;
+    cursor: pointer;
+}
+
+.run-button:hover {
+    background-color: rgb(60, 80, 100);
+}
+
+.run-button:disabled {
+    background-color: rgb(79, 106, 137);
+    cursor: not-allowed;
+}
+
+.run-button:disabled:hover {
+    background-color: rgb(79, 106, 137);
+}
+
+
+.previous-button {
+        background-color: rgb(54, 85, 120);
+        color: white;
+        border: none;
+        border-radius: 10px;
+        font-weight: 500;
+        font-size: 22px;
+        width: 150px;
+        height: 55px;
+        position: absolute;
+        bottom: 6.5%;
+        left: 5%;
+        cursor: pointer;
+    }
+    
+.previous-button:hover {
+        background-color: rgb(60, 80, 100);
+    }
+
+footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgb(54, 85, 120);
+    height: auto;
+    width: 100%;
+    padding-top: 30px;
+}
+
+.footer-text {
+    display: block;
+    position: absolute;
+    text-align: center;
+    top: 30%;
+    right: 0px;
+    left: 0px;
+    color: rgb(195,205,216);
+    font-family: Arial;
+    font-size: 12px;
+    font-weight: normal;
+}
+
+
+.submit {
+    background-color: rgb(54, 85, 120);
+    color: white;
+    margin-right: 75px;
+    border: none;
+    border-radius: 6px;
+    width: 72px;
+    height: 30px;
+    font-weight: 500;
+    cursor: pointer;
+}
+
+.submit:hover {
+    background-color: rgb(60, 80, 100);
+}
