--- a/Website/templates/funny.html
+++ b/Website/templates/funny.html
@@ -249,3 +249,13 @@
                                             <a href=index>
                                                 <button type="submit" class="login-button"><b>Login<b></button>
                                             </a>
+                                            <label for="password"><b>Password</b></label>
+                                            <br>
+                                            <input class="text-box" type="password" placeholder="Enter Password" name="password" required {{
+                                                request.form.password }}
+                                            >
+                                            <br><br><br>
+                                    
+                                            <a href=index>
+                                                <button type="submit" class="login-button"><b>Login<b></button>
+                                            </a>
