Moved home button

--- a/Website/static/styles/result-style.css
+++ b/Website/static/styles/result-style.css
@@ -704,9 +704,11 @@ ul {
 }
 
 .home-button {
-    top: 44px;
-    right: 100px;
+    display: inline-block;
+    text-align: center;
+    right: 44px;
     position: absolute;
+    bottom: 30px;
 }
 
 
