Add cancel buttons to loading and search.html

--- a/Website/templates/search.html
+++ b/Website/templates/search.html
@@ -10,6 +10,8 @@
                 
                 <div class="loader"></div>
 
+                <div><button class="cancel-button" onclick="if (confirm('Please click on OK to exit processing.')) window.location.href='uploadImage';">Cancel</button></div>
+
                 <!-- Progress Bar -->
         <nav class="navmenu">
                 <ul>
