--- a/Website/static/styles/loading-style.css
+++ b/Website/static/styles/loading-style.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+
+* {
+    /* margin: 0; */
+    /* padding: 0; */
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
+    max-width: 100%;
+}
+
 .loader {
         border: 16px solid #f3f3f3; /* Light grey */
         border-top: 16px solid #abc2db; /* Blue */
@@ -97,7 +107,7 @@
 .navmenu ul li.active {
         font-weight: 700;
         font-size: 22px;
-        color:black;
+        color:rgb(54, 85, 120);
 }
 
 .navmenu ul li.active::before {
@@ -417,13 +427,29 @@ footer {
 
 .submit:hover {
     background-color: rgb(60, 80, 100);
-    
-    a {
+}
+
+a {
     text-decoration: none;
-    
 }
 
 a:link, a:visited {
     color:rgb(54, 85, 120);
+}
 
+.cancel-button {
+    background-color: rgb(54, 85, 120);
+    color: white;
+    border: none;
+    border-radius: 10px;
+    font-weight: bolder;
+    font-size: 30px;
+    width: 200px;
+    height: 73px;
+    position: absolute;
+    bottom: 20%;
+    left: 0px;
+    right: 0px;
+    margin:auto;
+    cursor: pointer;
 }
