--- a/Website/templates/result.html
+++ b/Website/templates/result.html
@@ -60,13 +60,21 @@
 
         </div>
 
-
+    
 
     <!-- insert modal code here -->
     
 
         <div>
             <div class="toolbar-rerun">
+                <div>
+                    <button class="run-button" id="run-button" onclick="location.href='download'">
+                        <b>Download</b>
+                    </button>
+                </div>
+                    <!--onclick location.href to redirect page to uploadVideo-->
+                    
+            </div>
                 <!-- <div class="rerun">
                         <a href=image>
                                 <button class="training-button">
