Modified formatting a bit
- centered the cancel button on result.html

--- a/Website/templates/frameCount.html
+++ b/Website/templates/frameCount.html
@@ -10,7 +10,7 @@
         <div class="top-border">
                 <div class="top-elements">
                         <div class="title-label">
-                                <b>File Upload<b>
+                                <b>Frame Specification<b>
                         </div>
 
                         <div class="logout">
