--- a/Website/static/styles/result-style.css
+++ b/Website/static/styles/result-style.css
@@ -472,21 +472,23 @@
         right: 0;
         margin: auto;
         overflow: auto;
-
-
 }
 
 .download-button{
-        background-color: rgb(54, 85, 120);
-        color: white;
-        border: none;
-        border-radius: 10px;
-        font-weight: 500;
-        font-size: 20px;
-        width: 150px;
-        height: 60px;
-        position: absolute;
-        right: 5%;
+    background-color: rgb(54, 85, 120);
+    color: white;
+    border: none;
+    border-radius: 10px;
+    font-weight: 500;
+    font-size: 20px;
+    width: 150px;
+    height: 55px;
+    position: absolute;
+    bottom: 6%;
+    left: 0px;
+    right: 0px;
+    margin: auto;
+    cursor: pointer;
 }
 
 .training-button{
