--- a/Website/templates/result.html
+++ b/Website/templates/result.html
@@ -66,15 +66,13 @@
     
 
         <div>
-            <div class="toolbar-rerun">
                 <div>
-                    <button class="run-button" id="run-button" onclick="location.href='download'">
+                    <button class="download-button" onclick="location.href='download'">
                         <b>Download</b>
                     </button>
                 </div>
                     <!--onclick location.href to redirect page to uploadVideo-->
                     
-            </div>
                 <!-- <div class="rerun">
                         <a href=image>
                                 <button class="training-button">
